# barcodes-ocr

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
configs/: data.yaml  train_eval.yaml
notebooks/: select_model_params.ipynb
src/: constants.py  dir_utils.py
src/data/: clearml_utils.py  config.py  constants.py  dir_utils.py
src/data/fetch/: clearml_versioning.py  core.py  logger.py  main.py
src/data/prep/: clearml_versioning.py  dir_utils.py  main.py
src/data/prep/core/: export_crops.py  pipe.py  split.py
src/train/: datamodule.py  dataset.py  lightning_module.py  logger.py  main.py  model.py
src/train/config/: datamodule_cfg.py  lightning_module_cfg.py  train_config.py
src/train/data_utils/: constants.py  dataset_finder.py  image_convertation.py  transforms.py  types.py
src/train/train_utils/: clearml_tracking.py  losses.py  predict_utils.py  serialization.py
src/train/train_utils/callbacks/: constructor.py  draw_callbacks.py  model_callbacks.py
src/train/train_utils/metrics/: edit_distance.py  metric_collection.py  metrics_utils.py  string_match.py
src/train_eval/config/: data_source_cfg.py
