[tool.poetry]
name = "barcodes-ocr"
version = "0.1.0"
description = ""
authors = ["vladimir-sashin <sashin.v.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
clearml = "^1.16.2"
pydantic = "^2.8.2"
omegaconf = "^2.3.0"
pandas = "^2.2.2"
numpy = "^2.0.1"
opencv-python = "^4.10.0.84"

[tool.poetry.group.CI.dependencies]
wemake-python-styleguide = "^0.19.2"
pre-commit = "^3.7.0"



[tool.poetry.group.data.dependencies]
gdown = "^5.2.0"
scikit-learn = "^1.5.1"

[tool.vulture]
min_confidence = 80
paths = ["src"]
ignore_names = ["args", "kwargs", "batch_idx"]
sort_by_size = true
verbose = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
