[tool.poetry]
name = "barcodes-ocr"
version = "0.1.0"
description = ""
authors = ["vladimir-sashin <sashin.v.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
clearml = "^1.16.2"
pydantic = "^2.8.2"
omegaconf = "^2.3.0"
pandas = "^2.2.2"
numpy = "^1.25.1"
torch = "^2.3.1"
lightning = "^2.3.3"
torchvision = "^0.18.1"
opencv-python = "^4.10.0.84"
albumentations = "==1.3.1"
timm = "^1.0.7"
nltk = "^3.8.1"
tensorboard = "^2.17.0"
torchinfo = "^1.8.0"
onnx = "^1.16.1"

[tool.poetry.group.CI.dependencies]
wemake-python-styleguide = "^0.19.2"
pre-commit = "^3.7.0"
pytest = "^8.3.2"


[tool.poetry.group.data.dependencies]
gdown = "^5.2.0"
scikit-learn = "^1.5.1"


[tool.poetry.group.notebooks.dependencies]
jupyterlab = "^4.2.4"
jupyterlab-lsp = "^5.1.0"
python-lsp-server = {extras = ["python"], version = "^1.11.0"}
seaborn = "^0.13.2"

[tool.vulture]
min_confidence = 80
paths = ["src"]
ignore_names = ["args", "kwargs", "batch_idx"]
sort_by_size = true
verbose = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
